appId: com.hanjang.fo
---
- launchApp:
    clearState: true
- waitForAnimationToEnd
- repeat:
    times: 6
    commands:
      - runFlow:
          when:
            visible: "Continue"
          commands:
            - tapOn: "Continue"
      - runFlow:
          when:
            visible: "http://10.0.2.2:8091"
          commands:
            - tapOn: "http://10.0.2.2:8091"
      - runFlow:
          when:
            visible: "Fetch development servers"
          commands:
            - openLink: "exp+hanjang-fo://expo-development-client/?url=http://10.0.2.2:8091"
      - extendedWaitUntil:
          visible: "카카오로 시작"
          timeout: 5000
          optional: true
- runFlow:
    when:
      notVisible: "카카오로 시작"
    commands:
      - pressKey: back
- extendedWaitUntil:
    visible: "카카오로 시작"
    timeout: 40000